# data-pipeline-clone

./: .gitignore  Makefile  README.md  pyproject.toml  video_flow.py
video/: video_downloader.py  video_flow.py  video_storage.py  video_transcoder.py  video_transcriber.py
