[tool.poetry]
name = "data-pipeline"
version = "0.1.0"
description = ""
authors = ["Ran Tavory <rantav@gmail.com>"]
readme = "README.md"
packages = [{include = "data_pipeline"}]

[tool.poetry.dependencies]
python = "^3.11"
prefect = "^2.11.4"
yt-dlp = "^2023.7.6"
boto3 = "^1.28.31"
prefect-aws = "^0.3.6"
google-cloud-speech = "^2.21.0"
prefect-gcp = "^0.4.5"
google-cloud-storage = "^2.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
